--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<h1>hello </h1>
-<app-textcomponent></app-textcomponent>
-<app-imagecomponent></app-imagecomponent>
-<h2>person details</h2>
-<app-emp-info></app-emp-info>
+
+<app-form-component></app-form-component>
