--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<body>
+<app-navbar></app-navbar>
 
+<app-intro></app-intro>
+    <app-course-container></app-course-container>
+   
+    <app-footer></app-footer>
 
-<app-e-info></app-e-info>
+</body>
