--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <body>
 <app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
-<app-intro></app-intro>
-    <app-course-container></app-course-container>
-   
-    <app-footer></app-footer>
 
 </body>
